force-app/main/default/objects/Insurance__c/Insurance__c.object-meta.xml
<CustomObject>
    <description
  >Insurance details captured during application process</description>
    <label>Insurance</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>