force-app/main/default/objects/Insurance__c/fields/AgentAddress__c.field-meta.xml
<CustomField>
    <fullName>AgentAddress__c</fullName>
    <description>Address of insurance agent</description>
    <label>Agent Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>