force-app/main/default/objects/Insurance__c/fields/AgentName__c.field-meta.xml
<CustomField>
    <fullName>AgentName__c</fullName>
    <description>Insurance agent name</description>
    <label>Agent Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>