force-app/main/default/objects/Insurance__c/fields/AgentPhone__c.field-meta.xml
<CustomField>
    <fullName>AgentPhone__c</fullName>
    <description>Phone number of Insurance agent</description>
    <label>Agent Phone</label>
    <type>Phone</type>
</CustomField>