force-app/main/default/objects/Insurance__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <description>Insurance expire date</description>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>