force-app/main/default/objects/Insurance__c/fields/InsuranceCompany__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompany__c</fullName>
    <description>Name of the insurance company</description>
    <label>Insurance Company</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>