force-app/main/default/objects/Insurance__c/fields/InsurePolicyName__c.field-meta.xml
<CustomField>
    <fullName>InsurePolicyName__c</fullName>
    <description>Name of the policy</description>
    <label>Insure Policy Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>