force-app/main/default/objects/Insurance__c/fields/IsExistingInsurence__c.field-meta.xml
<CustomField>
    <fullName>IsExistingInsurence__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Check if customer has existing insurance for the vehicle.</description>
    <label>IsExistingInsurance</label>
    <type>Checkbox</type>
</CustomField>