force-app/main/default/objects/Insurance__c/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <description>Insurance policy number</description>
    <label>Policy Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>